--- a/public/styles/addconcert.css
+++ b/public/styles/addconcert.css
@@ -117,3 +117,17 @@ h1 {
     width: 30%;
     float: right;
 }
+
+/* -------- Footer -------- */
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    color: white;
+    font-family: 'Patua One', cursive;
+}
