--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -93,3 +93,17 @@ h3 {
     display: block;
     font-size: 14px;
 }
+
+/* -------- Footer -------- */
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    color: white;
+    font-family: 'Patua One', cursive;
+}
