--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -134,13 +134,13 @@ h5 {
     width: 40%;
 }
 
-/* ALERTS for signup */
+/* -------- ALERTS for signup -------- */
 
 .alert.error:first-of-type {
     margin: -30px auto 10px;
-  }
-  
-  .alert.error {
+}
+
+.alert.error {
     background-color: f23fc2;
     max-width: 680px;
     padding: 20px;
@@ -148,9 +148,23 @@ h5 {
     border: 1px solid #f23fc2;
     border-radius: 4px;
     color: #8c24bf;
-  }
-  
-  .input-error {
+}
+
+.input-error {
     background-color: #f23fc2;
     border: 2px solid #8c24bf;
-  }
+}
+
+/* -------- Footer -------- */
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    color: white;
+    font-family: 'Patua One', cursive;
+}
