--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -134,3 +134,17 @@ h1 {
     border-radius: 9px;
     box-shadow: 0 2px 10px rgba(0,0,0,.3);
 }
+
+/* -------- Footer -------- */
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    color: white;
+    font-family: 'Patua One', cursive;
+}
