--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -19,9 +19,6 @@
         <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
             <a class="nav-link" href="/signup">Sign Up</a>
         </li>
@@ -36,7 +33,7 @@
         <form class="form">
             <div class="form-group">
                 <label for="artist">Artist</label>
-                <input class="form-control" type="text" id="artist">
+                <input class="form-control" type="text" id="artist" placeholder="Who did you see?">
             </div>
             <div class="form-group">
                 <label for="example-date-input">Date</label>
@@ -68,6 +65,11 @@
             </div>
         </form>
     </div>
+    <footer class="footer">
+        <div>
+            <span>&copy; concertVAULT 2020</span>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
