--- a/views/profile.html
+++ b/views/profile.html
@@ -21,15 +21,9 @@
         <a class="navbar-brand" href="/index">concertVAULT</a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
-            <a class="nav-link" href="/signup">Sign Up</a>
+            <a class="nav-link" type="logout" href="/index">Logout</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-            </li>
         </ul>
     </div>
     </nav>
@@ -62,6 +56,11 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div>
+            <span>&copy; concertVAULT 2020</span>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
