--- a/views/addconcert.html
+++ b/views/addconcert.html
@@ -25,6 +25,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
             </li> -->
+        <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+        </li>
         </ul>
     </div>
     </nav>
