--- a/views/profile.html
+++ b/views/profile.html
@@ -28,7 +28,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" type="logout" href="/index">Log out</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" type="delete" href="/index">Delete Profile</a>
+                <a class="dropdown-item" id="delete" type="delete" href="/index">Delete Profile</a>
             </div>
             </li>
         </ul>
@@ -43,9 +43,9 @@
                         <image id="profileImage" />
                     </div>
                     <div class="row">
-                        <div class="col-md-12" id="update">
+                        <!-- <div class="col-md-12" id="update">
                             <button type="button" class= "btn btn-pill btn-sm" id="updateProfile" href="/:id">Update Profile</button>
-                        </div>
+                        </div> -->
                         </div>
                     <div class="row" id="user-info">
                         <div class="col-md-6" id="email">
